Additions to terminal. Fix Homepage Text on Mobile.

--- a/css/home/home.css
+++ b/css/home/home.css
@@ -1,6 +1,7 @@
 body,html {
   height: 100%;
   font-family: roboto;
+  overflow-x: hidden;
 }
 
 .text-muted {
@@ -140,6 +141,8 @@ p {
   line-height: 1em;
   font-size: 2em;
   text-decoration: none;
+
+  box-shadow: 0px 0px 10px rgba(255,255,255,0.6), 0px 0px 30px rgba(255,255,255,0.4), 0px 0px 50px rgba(255,255,255,0.3), 0px 0px 180px rgba(255,255,255,0.3);
 }
 
 .metro:hover {
@@ -488,27 +491,26 @@ p {
 }
 
 
-#shell::-webkit-scrollbar-track {
-  background-color: transparent;
-  z-index: 2;
+#shell::-webkit-scrollbar{
+	width: 10px;
 }
 
-#shell::-webkit-scrollbar {
-  height: 80%;
-  width: 10px;
-  background-color: black;
-  -webkit-border-radius: 3px 3px 3px 3px;
-  -moz-border-radius: 3px 3px 3px 3px;
-  border-radius: 3px 3px 3px 3px;
-  z-index: 2;
-}
-
-#shell::-webkit-scrollbar-thumb {
-   background: #e5e5e5;
+#shell::-webkit-scrollbar-track-piece{
+  background: #e5e5e5;
   background: -webkit-linear-gradient(#e5e5e5 0%, #b0b0b0 100%);
   background: linear-gradient(#e5e5e5 0%, #b0b0b0 100%);
   background-image: -moz-linear-gradient(#e5e5e5 0%, #b0b0b0 100%);
-  z-index: 2;
+}
+
+#shell::-webkit-scrollbar-thumb{
+	background-color: grey;
+	outline: 2px solid #FFF;
+	outline-offset: -2px;
+	border: .1px solid #B7B7B7;
+}
+
+#shell::-webkit-scrollbar-thumb:hover{
+	background-color: #909090;
 }
 
 #upper {
@@ -557,6 +559,39 @@ p {
 .green {
   background: #96cf7d;
   border: 1px solid #78c158;
+}
+
+
+.toolbartip {
+    position: relative;
+    display: inline-block;
+}
+
+/* Tooltip text */
+.toolbartip .toolbartiptext {
+    visibility: hidden;
+    opacity:0;
+    transition:opacity 0.5s linear;
+    width: 120px;
+    color: black;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.toolbartip:hover .toolbartiptext {
+    visibility: visible;
+    opacity: 1;
+    transition:opacity 0.3s linear;
+}
+
+.toolbartiptext.red {
+  margin-top: 15px;
 }
 
 #main {
@@ -644,12 +679,13 @@ p {
   margin: 3px 0px;
 }
 
+.minimize {
+  min-height: 0 !important;
+  height: 35px !important;
+  overflow: hidden !important;
+}
 
-
-
-
-
-
+/* End about terminal css*/
 
 #portfolio {
   min-height: 1000px;
@@ -828,28 +864,64 @@ a.socialIcon:hover, .socialHoverClass {
  background-color: #D3D3D3;
 }
 
-.mobile-text-header {
-    display: none;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 100;
-}
-
 .mobile-text-header h1 {
-  font-size: 1.5em;
+  font-size: 4em;
   font-weight: bold;
   color: black;
+  text-shadow: 0px 0px 10px rgba(255,255,255,0.6), 0px 0px 30px rgba(255,255,255,0.4), 0px 0px 50px rgba(255,255,255,0.3), 0px 0px 180px rgba(255,255,255,0.3);
 }
 
-/* Circle Lettering */
+.mobile-text-header.left {
+    display: none;
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.mobile-text-header.right {
+    display: none;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/* Hide Circle Lettering and Show Mobile Header */
 @media all and (max-width: 615px) {
   .circle-text {
     display: none;
   }
-  .mobile-text-header {
+  .mobile-text-header.left {
     display: block;
+  }
+  .mobile-text-header.right {
+    display: block;
+  }
+
+  .profile-button {
+    font-size: .8em;
+  }
+}
+
+/* Iphone 5 width/height adjustments */
+@media all and (max-width: 370px) {
+
+  .mobile-text-header h1 {
+    font-size: 3em;
+    font-weight: bold;
+    color: black;
+  }
+
+  .mobile-text-header.left {
+    top: 1%;
+  }
+  .mobile-text-header.right {
+    top: 76%;
+  }
+
+  .profile-image {
+    transform: scale(.95);
   }
 }
 
@@ -857,6 +929,10 @@ a.socialIcon:hover, .socialHoverClass {
   position: absolute;
   width: 400px;
   transform: translateX(-50%) rotate(-50deg);
+}
+
+.circle-text:not(.char5) {
+  text-shadow: 0px 0px 10px rgba(255,255,255,0.6), 0px 0px 30px rgba(255,255,255,0.4), 0px 0px 50px rgba(255,255,255,0.3), 0px 0px 180px rgba(255,255,255,0.3);
 }
 
 .circle-text span {
